kube/applications/adguard/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard
  namespace: applications
  annotations:
    ignore-check.kube-linter.io/latest-tag: >-
      FIXME: fix this one
    ignore-check.kube-linter.io/no-read-only-root-fs: >-
      FIXME: fix this one
    ignore-check.kube-linter.io/run-as-non-root: >-
      FIXME: fix this one
    ignore-check.kube-linter.io/unset-memory-requirements: >-
      FIXME: fix this one
    ignore-check.kube-linter.io/unset-cpu-requirements: >-
      FIXME: fix this one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard
  template:
    metadata:
      labels:
        app: adguard
    spec:
      containers:
        - name: adguard-home
          image: adguard/adguardhome:latest
          command:
            - "sh"
            - "-c"
            - >
              cp /etc/adguard/conf/AdGuardHome.yaml /opt/adguardhome/conf && sleep 10 && /opt/adguardhome/AdGuardHome --no-check-update
              --config /opt/adguardhome/conf/AdGuardHome.yaml

          ports:
            - containerPort: 53 #dns
              name: dns
              protocol: UDP
            - containerPort: 3000
              name: http-initial
            - containerPort: 80 #web gui
              name: http
              protocol: TCP
          volumeMounts:
            - name: adguard-data
              mountPath: /opt/adguardhome/work
            - name: config
              mountPath: /etc/adguard/conf/AdGuardHome.yaml
              # mountPath: /opt/adguardhome/conf/AdGuardHome.yaml
              # mountPath: /tmp/AdGuardHome.yaml
              subPath: AdGuardHome.yaml
              readOnly: true
      volumes:
        - name: adguard-data
          persistentVolumeClaim:
            claimName: adguard
        - name: config
          configMap:
            name: adguard-config
