kube/applications/adguard/dns-tcp.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-dns-tcp
  namespace: applications
  annotations:
    metallb.universe.tf/allow-shared-ip: "public-ip-${IP_ADDRESS}"
    external-dns.alpha.kubernetes.io/hostname: dns.${DOMAIN}
spec:
  selector:
    app: adguard
  ports:
    - name: tcp
      protocol: TCP
      port: 53
      targetPort: 53
  type: LoadBalancer
  loadBalancerIP: "${IP_ADDRESS}"
