kube/applications/adguard/dns-udp.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-dns-udp
  namespace: applications
  annotations:
    metallb.universe.tf/allow-shared-ip: "public-ip-${IP_ADDRESS}"
spec:
  selector:
    app: adguard
  ports:
    - name: udp
      protocol: UDP
      port: 53
      targetPort: 53
  type: LoadBalancer
  loadBalancerIP: "${IP_ADDRESS}"
