kube/applications/adguard/service-dns.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-dns
  namespace: applications
spec:
  selector:
    app: adguard
  ports:
    - name: udp
      protocol: UDP
      port: 53
      targetPort: 53
    - name: tcp
      protocol: TCP
      port: 53
      targetPort: 53
  type: LoadBalancer
  loadBalancerIP: "${IP_ADDRESS}"
