kube/applications/adguard/service-web.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-web
  namespace: applications
spec:
  selector:
    app: adguard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
  type: ClusterIP
